// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListingCard matches snapshot 1`] = `
<a
  aria-label="ListingCard.screenreader.label"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="photo"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 125%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="body"
  >
    <div
      class="name"
    >
      listing1 title
    </div>
    <div
      class="rule"
    />
    <div
      class="foot"
    >
      <div
        class="rate"
        title="55"
      >
        55
        <small>
          ListingCard.perDay
        </small>
      </div>
      <span
        class="viewBtn"
      >
        ListingCard.viewProfile
      </span>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  aria-label="listing1 title"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="photo"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 125%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="body"
  >
    <div
      class="name"
    >
      listing1 title
    </div>
    <div
      class="rule"
    />
    <div
      class="foot"
    >
      <span />
      <span
        class="viewBtn"
      >
        ListingCard.viewProfile
      </span>
    </div>
  </div>
</a>
`;
